# MicroFtp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: README.md
src/MicroFtp/: FtpClient.cpp  FtpClient.h
test/: main.cpp
